force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/RE_SG_Cost_Price_Manager__mdt.object-meta.xml
<CustomObject>
    <label>RE_SG_Cost Price Manager</label>
    <pluralLabel>RE_SG_Cost Price Manager</pluralLabel>
</CustomObject>