force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/fields/RE_SG_Dist_Disc_Percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_SG_Dist_Disc_Percentage__c</fullName>
    <label>Dist Disc Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>