force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/fields/RE_SG_Dist_Disc_Quote__c.field-meta.xml
<CustomField>
    <fullName>RE_SG_Dist_Disc_Quote__c</fullName>
    <label>Dist Disc Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distillation Discount</fullName>
                <default>true</default>
                <label>Distillation Discount</label>
            </value>
            <value>
                <fullName>FuelSave95 Premium</fullName>
            </value>
            <value>
                <fullName>FuelSave98 Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>