force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/fields/RE_SG_HCV_Quote_2__c.field-meta.xml
<CustomField>
    <fullName>RE_SG_HCV_Quote_2__c</fullName>
    <label>HCV Quote 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Gasoil 0.001% S</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.05% S</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.25% S</fullName>
            </value>
            <value>
                <fullName>Kero</fullName>
            </value>
            <value>
                <fullName>MOGAS 95</fullName>
            </value>
            <value>
                <fullName>MOGAS 97</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>