force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/fields/RE_SG_HCV_Quote_2_Percent__c.field-meta.xml
<CustomField>
    <fullName>RE_SG_HCV_Quote_2_Percent__c</fullName>
    <label>HCV Quote 2 %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>