force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/fields/RE_SG_Market_Premium_Quote__c.field-meta.xml
<CustomField>
    <fullName>RE_SG_Market_Premium_Quote__c</fullName>
    <label>Market Premium Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kero Premium</fullName>
                <default>true</default>
                <label>Kero Premium</label>
            </value>
            <value>
                <fullName>Gasoil 0.001% Premium</fullName>
            </value>
            <value>
                <fullName>FuelSave95 Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>