force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/fields/RE_SG_Oil_Loss_Percent__c.field-meta.xml
<CustomField>
    <fullName>RE_SG_Oil_Loss_Percent__c</fullName>
    <label>Oil Loss %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>