force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/fields/RE_SG_Plant__c.field-meta.xml
<CustomField>
    <fullName>RE_SG_Plant__c</fullName>
    <label>Plant</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Pandan</fullName>
                <default>true</default>
                <label>Pandan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>