force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/fields/RE_SG_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_SG_Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FuelSave95</fullName>
                <default>true</default>
                <label>FuelSave95</label>
            </value>
            <value>
                <fullName>FuelSave98</fullName>
            </value>
            <value>
                <fullName>Fuelsave Diesel</fullName>
            </value>
            <value>
                <fullName>IGO 10ppm</fullName>
            </value>
            <value>
                <fullName>Kero</fullName>
            </value>
            <value>
                <fullName>MGO 0.1%</fullName>
            </value>
            <value>
                <fullName>MGO 0.5%</fullName>
            </value>
            <value>
                <fullName>Vpower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>