force-app/main/default/objects/RE_SG_Cost_Price_Manager__mdt/fields/RE_SG_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>RE_SG_Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>